# WebScrapeNavigator

./: .replit  Pasted-During-handling-of-the-above-exception-another-exception-occurred-Traceback-most-recent-call-las-1726640396714.txt  Pasted-The-above-exception-was-the-direct-cause-of-the-following-exception-Traceback-most-recent-call-la-1726640777345.txt  main.py  pyproject.toml  tasks.py
database/: db.py
scraper/: preprocessor.py  scraper.py  utils.py
static/css/: style.css
static/js/: script.js
templates/: index.html
